# fastcgi_json_cpp_api

./: CMakeLists.txt  Doxyfile  README.md  demo_sensor_server.cpp  fakesensor.h  gendoc.sh  json_fastcgi_web_api.h
ads1115_demo/: CMakeLists.txt  README.md  ads1115_server.cpp
ads1115_demo/website/: ads1115.html  index.html
docs/: annotated.html  classJSONCGIHandler-members.html  classJSONCGIHandler.html  classJSONCGIHandler_1_1GETCallback-members.html  classJSONCGIHandler_1_1GETCallback.html  classJSONCGIHandler_1_1JSONGenerator-members.html  classJSONCGIHandler_1_1JSONGenerator.html  classJSONCGIHandler_1_1POSTCallback-members.html  classJSONCGIHandler_1_1POSTCallback.html  classes.html  files.html  functions.html  functions_func.html  index.html  json__fastcgi__web__api_8h_source.html  md_README.html  pages.html
docs/pdf/: annotated.tex  classJSONCGIHandler.tex  classJSONCGIHandler_1_1GETCallback.tex  classJSONCGIHandler_1_1JSONGenerator.tex  classJSONCGIHandler_1_1POSTCallback.tex  md_README.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
ds18b20/: CMakeLists.txt  README.md  ds18b20.h  ds18b20_server.cpp
ds18b20/website/: index.html
fake_sensor_demo/: CMakeLists.txt  README.md  demo_sensor_server.cpp  fakesensor.h
fake_sensor_demo/website/: index.html
stringRW/: CMakeLists.txt  stringRW.cpp
usbdux_demo/: CMakeLists.txt  README.md  usbdux_server.cpp
usbdux_demo/website/: index.html  usbdux.html
website/: fakesensor.html  index.html  nginx-sites-enabled-default  textonly.html
