cmake_minimum_required(VERSION 3.10.0)
include_directories(..)
project (ads1115_sensor_demo)
add_executable(ads1115_server ads1115_server.cpp)
set (CMAKE_CXX_STANDARD 14)
find_package (Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
TARGET_LINK_LIBRARIES(ads1115_server fcgi curl rt jsoncpp ${CMAKE_THREAD_LIBS_INIT} ads1115rpi)
