cmake_minimum_required(VERSION 3.10.0)
include_directories(..)
project (ads1115_sensor_demo)
add_executable(ads1115_server ads1115_server.cpp)
set (CMAKE_CXX_STANDARD 14)
find_package (Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
target_include_directories(ads1115_server SYSTEM PUBLIC ${JSONCPP_INCLUDE_DIRS})
target_link_libraries(ads1115_server fcgi rt ${JSONCPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ads1115rpi)
