cmake_minimum_required(VERSION 3.31.0)
project (ds18b20_sensor)
include_directories(..)
add_executable(ds18b20_server ds18b20_server.cpp)
set (CMAKE_CXX_STANDARD 17)
find_package (Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
TARGET_LINK_LIBRARIES(ds18b20_server fcgi rt ${JSONCPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
