cmake_minimum_required(VERSION 3.10.0)
project (usbdux_sensor_demo)
include_directories(..)
add_executable(usbdux_server usbdux_server.cpp)
set (CMAKE_CXX_STANDARD 14)
find_package (Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
target_include_directories(usbdux_server SYSTEM PUBLIC ${JSONCPP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(usbdux_server comedi fcgi curl rt ${JSONCPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
